# NeuralReflex

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: post_compact_cs.hlsl  post_decode_filter_cs.hlsl  post_nms_cs.hlsl  preprocess_cs.hlsl
cmake/: embed_shader_header.cmake
include/nrx/core/: application.hpp  config.hpp  config_manager.hpp
include/nrx/gfx/: dx_context.hpp  dx_types.hpp  gfx_bridge.hpp  screen_capturer.hpp
include/nrx/inference/: image_preprocessor.hpp  inference_engine.hpp  ort_session_manager.hpp  postprocessor.hpp  resource_transition.hpp  types.hpp
include/nrx/utils/: dx_helper.hpp  logger.hpp
src/: main.cpp
src/core/: application.cpp  config_manager.cpp  platform.hpp  platform_win.cpp
src/gfx/: dx_context.cpp  gfx_bridge.cpp  screen_capturer.cpp
src/inference/: image_preprocessor.cpp  inference_engine.cpp  ort_session_manager.cpp  postprocessor.cpp  postprocessor_internal.cpp  postprocessor_internal.hpp
src/utils/: dx_helper.cpp  logger.cpp
